force-app/main/default/objects/Toolbox_Talk__c/Toolbox_Talk__c.object-meta.xml
<CustomObject>
    <description>Toolbox talk records capturing safety briefing topics, conductor, and attendance on EPC project sites.</description>
    <label>Toolbox Talk</label>
    <nameField>
        <displayFormat>TBT-{00000}</displayFormat>
        <label>Toolbox Talk Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Toolbox Talks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>