force-app/main/default/objects/Toolbox_Talk__c/fields/Conducted_By__c.field-meta.xml
<CustomField>
    <fullName>Conducted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conducted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Toolbox Talks</relationshipLabel>
    <relationshipName>Toolbox_Talks_Conductor</relationshipName>
    <type>Lookup</type>
</CustomField>