force-app/main/default/objects/Toolbox_Talk__c/fields/Talk_Date__c.field-meta.xml
<CustomField>
    <fullName>Talk_Date__c</fullName>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>